--- a/index.html
+++ b/index.html
@@ -6,24 +6,10 @@
     <meta charset="utf-8">
 
     <script type="module"
-            src="index.js"></script>
+            src="example.js"></script>
 </head>
 
 <body>
-    <script>
-        const initial = {
-            message: 'Hello, World!',
-            onEnter: () => {
-                console.log('enter')
-            },
-            onExit: () => {
-                console.log('exit')
-            },
-            untilUpdate: new Promise(resolve => {})
-        }
-        const state = CreateMealy(initial)
-        console.log(state.message)
-    </script>
 </body>
 
 </html>
