--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <script type="module"
-            src="example.js"></script>
+            src="./example.js"></script>
 </head>
 
 <body>
