to remove favicon error

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>mealy</title>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="#">
 
     <script type="module"
             src="./example.js"></script>
