point at right test

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="#">
 
     <script type="module"
-            src="./example.js"></script>
+            src="./examples/hello-world.js"></script>
 </head>
 
 <body>
