--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -12,11 +12,31 @@
 		import { html, render } from 'https://unpkg.com/lit-html?module'
 		import { asyncReplace } from 'https://unpkg.com/lit-html/directives/async-replace?module'
 		import { stopwatch } from './stopwatch.js'
+		// styles
+		const css = html`
+		<style>
+			:host { 
+				width: 100%;
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-evenly;
+			} 
+			button {
+				flex-grow: 1;
+				width: 100%;
+				height: 100%;
+				font-size: 24px;
+			}
+		</style>
+		`
 		// Define a template
 		const template = html`
-		<span>${asyncReplace(stopwatch)}</span>
-		<button @click="${stopwatch.top()}">top</button>
-		<button @click="${stopwatch.split()}">split</button>`
+		${css}
+		<button @click="${stopwatch.top()}">
+			${asyncReplace(stopwatch)}
+		</button>
+		<button @click="${stopwatch.split()}"></button>`
 		// Render the template to the document
 		render(template, document.body)
 	</script>
