--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -15,7 +15,7 @@
 		// styles
 		const css = html`
 		<style>
-			:host { 
+			:host, body { 
 				width: 100%;
 				height: 100%;
 				display: flex;
