monospace to reduce jitter

--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -16,6 +16,7 @@
 		const css = html`
 		<style>
 			:host, body { 
+				font-family: monospace;
 				width: 50%;
 				height: 50%;
 				display: flex;
