--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -24,6 +24,7 @@
 				justify-content: space-evenly;
 			} 
 			button {
+				font-family: monospace;
 				flex-grow: 1;
 				width: 100%;
 				height: 100%;
