--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -35,10 +35,10 @@
 		const template = html`
 		${css}
 		<button @click="${stopwatch.top}">
-			${asyncReplace(stopwatch).time}
+			${asyncReplace(time())}
 		</button>
 		<button @click="${stopwatch.split}">
-			${asyncReplace(stopwatch).lap}
+			${asyncReplace(lap())}
 		</button>`
 		// Render the template to the document
 		render(template, document.body)
