--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -17,17 +17,16 @@
 		<style>
 			body { 
 				margin: auto;
-				width: 50%;
-				height: 50vh;
+				min-width: 50%;
+				min-height: 50vh;
 				display: flex;
 				flex-direction: column;
 				justify-content: space-evenly;
 			} 
 			button {
 				font-family: monospace;
-				flex-grow: 1;
-				width: 100%;
 				font-size: 60px;
+				padding: 1em;
 			}
 		</style>
 		`
