--- a/examples/stopwatch/stop-watch/stop-watch.html
+++ b/examples/stopwatch/stop-watch/stop-watch.html
@@ -1,6 +1,6 @@
-<button @click="${stopwatch.top}">
-	${asyncReplace(stopwatch.time)}
+<button @click="${this.#top}">
+	${asyncReplace(this.#time)}
 </button>
-<button @click="${stopwatch.split}">
-	${asyncReplace(stopwatch.lap)}
+<button @click="${this.#side}">
+	${asyncReplace(this.#lap)}
 </button>
