--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -5,23 +5,13 @@
    <title>mealy</title>
    <meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
+	<script type="module" src="https://unpkg.com/lit-html?module"></script>
+	<script type="module" src="https://unpkg.com/lit-html/directives/async-replace?module"></script>
+	<script type="module" src="./stop-watch/stop-watch.js"></script>
 </head>
 
 <body>
 	<stop-watch></stop-watch>
-	<script type="module">
-		import { Stopwatch } from './stopwatch.js'
-		import { html, render } from 'https://unpkg.com/lit-html?module'
-		import { asyncReplace } from 'https://unpkg.com/lit-html/directives/async-replace?module'
-		const template = html`
-			<style>
-				${css}
-			</style>
-			${html}
-		`
-		// Render the template to the document
-		render(template, document.body)
-	</script>
 </body>
 
 </html>
