--- a/examples/stopwatch/stop-watch/stop-watch.html
+++ b/examples/stopwatch/stop-watch/stop-watch.html
@@ -1,6 +1,6 @@
 <button @click="${this.#top}">
-	${asyncReplace(this.#time)}
+	${asyncReplace(this.time)}
 </button>
 <button @click="${this.#side}">
-	${asyncReplace(this.#lap)}
+	${asyncReplace(this.lap)}
 </button>
