--- a/examples/stopwatch/index.html
+++ b/examples/stopwatch/index.html
@@ -5,6 +5,14 @@
    <title>mealy</title>
    <meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
+	<script type="module" src="https://unpkg.com/lit-html?module">
+		import { html, render } from 'https://unpkg.com/lit-html?module'
+		import { asyncReplace } from 'https://unpkg.com/lit-html/directives/async-replace?module'	
+		// 
+		window.asyncReplace = asyncReplace
+		window.html = html
+		window.render = render
+	</script>
 	<script type="module" src="./stop-watch/stop-watch.js"></script>
 </head>
 
