fix file structure and references

--- a/examples/stop-watch/index.html
+++ b/examples/stop-watch/index.html
@@ -5,7 +5,7 @@
    <title>mealy</title>
    <meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
-	<script type="module" src="https://unpkg.com/lit-html?module">
+	<script type="module">
 		import { html, render } from 'https://unpkg.com/lit-html?module'
 		import { asyncReplace } from 'https://unpkg.com/lit-html/directives/async-replace?module'	
 		// 
@@ -13,7 +13,7 @@
 		window.html = html
 		window.render = render
 	</script>
-	<script type="module" src="./stop-watch/stop-watch.js"></script>
+	<script type="module" src="stop-watch.js"></script>
 </head>
 
 <body>
