--- a/examples/stop-watch/index.html
+++ b/examples/stop-watch/index.html
@@ -5,6 +5,7 @@
    <title>mealy</title>
    <meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
+	<link href="styles.css" rel="stylesheet">
 	<script type="module">
 		import { html, render } from 'https://unpkg.com/lit-html?module'
 		import { asyncReplace } from 'https://unpkg.com/lit-html/directives/async-replace?module'	
