fix web address

--- a/examples/stop-watch/index.html
+++ b/examples/stop-watch/index.html
@@ -6,9 +6,9 @@
    <meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
 	<link href="styles.css" rel="stylesheet">
-	<script type="module" src="unpkg.com/lit-html?module"></script>
-	<script type="module" src="unpkg.com/lit-html/directives/async-replace?module"></script>
-	<script type="module" src="unpkg.com/mealtime"></script>
+	<script type="module" src="https://unpkg.com/lit-html?module"></script>
+	<script type="module" src="https://unpkg.com/lit-html/directives/async-replace?module"></script>
+	<script type="module" src="https://unpkg.com/mealtime"></script>
 	<script type="module" src="stop-watch.js"></script>
 </head>
 
