--- a/examples/stop-watch/index.html
+++ b/examples/stop-watch/index.html
@@ -8,7 +8,7 @@
 	<link href="styles.css" rel="stylesheet">
 	<script type="module" src="https://unpkg.com/lit-html?module"></script>
 	<script type="module" src="https://unpkg.com/lit-html/directives/async-replace?module"></script>
-	<script type="module" src="https://unpkg.com/mealtime"></script>
+	<script type="module" src="https://unpkg.com/mealtime?module"></script>
 	<script type="module" src="stop-watch.js"></script>
 </head>
 
