--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 				word: 'world'
 		}
 
-		const { proxy, setTarget } = new Context()
+		const context = new Context()
+		const { proxy } = context
 
-		setTarget(a)
+		context.setTarget(a)
 		console.log(proxy.word) //> 'hello'
 
-		setTarget(b)
+		context.setTarget(b)
 		console.log(proxy.word) //> 'world'
 	</script>
 </body>
