combine proxy get and target set into one public target property

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 		}
 
 		const context = new Context()
-		const { proxy, setTarget } = context
+		const { target } = context
 
-		setTarget(a)
-		console.log(proxy.word) //> 'hello'
+		context.target = a
+		console.log(target.word) //> 'hello'
 
-		setTarget(b)
-		console.log(proxy.word) //> 'world'
+		context.target = b
+		console.log(target.word) //> 'world'
 	</script>
 </body>
 
