--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>mealy</title>
+	<title>mealtime</title>
 	<meta charset="utf-8">
 	<link rel="shortcut icon" href="#">
 </head>
