--- a/index.html
+++ b/index.html
@@ -11,31 +11,37 @@
 	<script type="module">
     import { Context } from 'https://esm.sh/mealtime'
 
-		const a = {
-			word: 'hello'
-		}
-		const b = {
-			word: 'world'
+		class Powerable { // abstract class Powerable {
+			state = ''
+			power() {}
 		}
 
-		const context = new Context()
-		const { target } = context
+		class TV extends Powerable {
 
-		context.target = a
-		console.log(target.word) //> hello
-
-		context.target = b
-		console.log(target.word) //> world
-
-		target.word = 'meal'
-		console.log(target.word) //> meal
-
-		const observe = async function () {
-			for await (const { value } of context) {
-				console.log(value)
+			#context = new Context() // #context = new Context<Powerable>()
+			
+			constructor() {
+				super()
+				this.#context.target = this.#off
+				return this.#context.target // return this.#context.target as any
 			}
-		}()
-		target.word = 'time' //> time
+			
+			#off = { // #off: Powerable = {
+				state: 'tv is off',
+				power: () => this.#context.target = this.#on
+			}
+			
+			#on = { // #on: Powerable = {
+				state: 'tv is on',
+				power: () => this.#context.target = this.#off
+			}
+		}
+
+		const tv = new TV()
+		console.log(tv.state) // tv is off
+
+		tv.power()
+		console.log(tv.state) // tv is on
 
 	</script>
 </body>
