--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 			
 			constructor() {
 				super()
-				this.#context.target = this.#off
-				return this.#context.target // return this.#context.target as any
+				this.#context.state = this.#off
+				return this.#context.state // return this.#context.state as any
 			}
 			
 			#off = { // #off: Powerable = {
 				state: 'tv is off',
-				power: () => this.#context.target = this.#on
+				power: () => this.#context.state = this.#on
 			}
 			
 			#on = { // #on: Powerable = {
 				state: 'tv is on',
-				power: () => this.#context.target = this.#off
+				power: () => this.#context.state = this.#off
 			}
 		}
 
