--- a/code/index.html
+++ b/code/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="./assets/favicon.ico" />
-        <link rel="stylesheet" href="./index.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>peekeasy</title>
-    </head>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="./index/assets/favicon.ico" />
+		<link rel="stylesheet" href="./index/index.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>peekeasy</title>
+	</head>
 
-    <body>
-        <script type="module">
-            import Svelte from './index.svelte'
+	<body>
+		<script type="module">
+			import Svelte from './index/index.svelte'
 
-            export default new Svelte({
-                target: document.body,
-            })
-        </script>
-    </body>
+			export default new Svelte({
+				target: document.body,
+			})
+		</script>
+	</body>
 </html>
